--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -287,7 +287,7 @@
               }
             }
             .desc {
-              flex: 0 0 80%;
+              flex: 1 1 auto;
               padding: 18px 2.5%;
               font-weight: 500;
               background-color: #f5fbff;
