--- a/sass/layout/_interview.scss
+++ b/sass/layout/_interview.scss
@@ -3,7 +3,7 @@
 @use '../foundation/mixins';
 
 /* ============================================
-// インタビュー
+// スタッフインタビュー
 // ==========================================*/
 
 // 一覧
