--- a/sass/layout/_data.scss
+++ b/sass/layout/_data.scss
@@ -3,7 +3,7 @@
 @use '../foundation/mixins' as *;
 
 /* ============================================
-// データで見るアリスタッチ
+// スタッフデータ
 // ==========================================*/
 .lower-data {
   .data {
@@ -358,6 +358,9 @@
                     flex: 0 0 33.3%;
                     border-right: 1px solid #d5d7d7;
                     padding: 12px 0;
+                    font-size: 2rem;
+                    font-family: $font-Montserrat;
+                    font-weight: bold;
                     &:last-child {
                       border-right: none;
                     }
@@ -367,19 +370,6 @@
                     font-size: 2.8rem;
                     font-family: $font-Montserrat;
                     font-weight: bold;
-                    position: relative;
-                    padding-right: 12px;
-
-                    &:before {
-                      content: '%';
-                      display: inline-block;
-                      font-size: 2rem;
-                      font-family: $font-Montserrat;
-                      font-weight: bold;
-                      position: absolute;
-                      bottom: -6px;
-                      right: -8px;
-                    }
                   }
                 }
               }
@@ -695,7 +685,7 @@
               display: flex;
               flex-wrap: wrap;
               margin-top: 20px;
-              padding: 24px 8%;
+              padding: 24px 7%;
               position: relative;
               border: 1px dotted #3c7ecb;
               border-radius: 10px;
@@ -933,6 +923,9 @@
                 margin-top: 10px;
                 padding: 12px 14px;
                 border-radius: 2px;
+                @media all and (-ms-high-contrast: none) {
+                  flex: 0 0 43%;
+                }
                 @media screen and (min-width:768px) and (max-width:1024px) {
                   padding: 12px 10px;
                 }
